force-app/main/default/objects/Maintenance_Request__c/Maintenance_Request__c.object-meta.xml
<CustomObject>
    <description>Request for doing the maintenanceservice</description>
    <label>Maintenance Request</label>
    <nameField>
        <label>Maintenance Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>