force-app/main/default/objects/Maintenance_Request__c/fields/Vechile__c.field-meta.xml
<CustomField>
    <fullName>Vechile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vechile</label>
    <referenceTo>Vechile__c</referenceTo>
    <relationshipLabel>Maintenance Requests</relationshipLabel>
    <relationshipName>Maintenance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>